--- a/proffesional template/styles.css
+++ b/proffesional template/styles.css
@@ -30,7 +30,7 @@ margin:0 0 0 40px;
 }
 
 p {
-font:12px Arial, sans-serif;
+font:12px/150% Arial, sans-serif;
 color:#4f4f4f;
 margin:0;
 }
@@ -40,6 +40,8 @@ background-color:#fff;
 width:960px;
 margin:40px auto;
 border-radius:10px;
+background-image: url("images/wrapper-bg.jpg");
+background-repeat: repeat-x;
 }
 
 .col ul li a {
@@ -51,37 +53,46 @@ text-decoration:none;
 list-style:none;
 background-image:url(images/col2List.jpg);
 background-repeat:no-repeat;
-background-position:0 17px;
-padding:12px 7px;
+background-position:0 6px;
+/*padding:12px 16px;*/
+padding: 2px 0 7px 16px;
 }
 
 .col li:first-child {
 border-bottom:1px dotted #a4a4a4;
+padding: 0px 0 7px 16px;
 }
 
 .col li:last-child {
 border-top:1px dotted #a4a4a4;
+padding-bottom: 46px;
 }
 
-#columns .col button {
+/*#columns .col button {
 color:#868686;
 font:12px "Myriad Pro", Helvetica,sans-serif;
-}
+}*/
 
 #columns .col p {
-padding:25px 0 20px;
+padding:25px 0 12px;
 }
 
-header img {
+header #logo {
 position:relative;
 float:left;
 top:35px;
 left:40px;
 }
+/*
+header a img {
+float: left;
+left: 20px;
+position: relative;
+top: 35px;}*/
 
 header ul li {
 display:inline;
-padding:0 24px;
+padding:0 20px;
 position:relative;
 float:right;
 top:58px;
@@ -92,21 +103,21 @@ header li a {
 font:12px Arial, sans-serif;
 text-decoration:none;
 color:gray;
+font-weight: bold;
 }
 
 header ul li:last-child {
-background-image:url(images/home.jpg);
-background-repeat:no-repeat;
+/*background-repeat:no-repeat;
 background-position:center;
-height:20px;
+height:20px;*/
 padding:2px 20px 5px;
-width:35px;
+/*width:35px;*/
 }
 
-#wrapper header #page {
+/*#wrapper header #page {
 color:#fff;
 }
-
+*/
 #wrapper ul {
 margin:0;
 padding:0;
@@ -139,27 +150,23 @@ top:-127px;
 left:489px;
 }
 
-/*#ad{
-				float: right;
-	    		/*position: relative;
-	   			right: -7px;
-	   			top: -185px;
-			}*/
 #ball {
 float:right;
 margin:-415px 50px 0 0;
 z-index:20;
 }
 #position-cs-buttons p{
-	float:letf;
 	color: #000000;
     float: left;
-    font: bold 20px Arial sans-serif;
+    font: bold 20px Arial, sans-serif;
     margin: 17px 0 12px 0;
 }
 #position-cs-buttons .cs-buttons{
 	float:right;
 	margin: 17px 0 12px 0;
+}
+.cs-buttons img{
+	border:0;
 }
 #carousel {
 	height: 318px;
@@ -174,22 +181,17 @@ float:right;
 section p {
 font:29px Trebushed, sans-serif;
 color:#fff;
-position:left;
 margin:0;
 padding:88px 65px 55px 50px;
 }
 
 section #start-button {
-font:bold 20px Trebushed, sans-serif;
-background:url(images/start-button.jpg) no-repeat;
-padding:14px 53px 18px 14px;
-display:inline;
-color:#b90016;
-margin-left:55px;
-height:55px;
-width:269px;
+margin:-18px 0 0px 47px;
 }
 
+section p span {
+	font-weight: bold;
+}
 #blurbs {
 background-image:url(images/bg-grey.jpg);
 position:relative;
@@ -220,13 +222,10 @@ color:#575757;
 }
 
 .reason img {
-padding:40px 20px 22px 50px;
+padding:32px 20px 16px 51px;
 float:left;
 }
 
-.byline {
-font-style:bold;
-}
 
 #column1,#column2,#column3 {
 float:left;
@@ -251,7 +250,7 @@ footer {
 background-color:#ededed;
 border-top:1px solid #bababa;
 overflow:hidden;
-/*clear:both;*/
+border-radius: 0 0 10px 10px;
 }
 
 #wrapper footer ul li a {
@@ -271,15 +270,18 @@ padding:30px 0;
 #column2 p span {
 font-weight:700;
 color:#000;
+padding: 13px 0 0 0;
+float:left;
+
 }
 
-#column3 p span {
+#column3 a {
 font-weight:700;
-color:#4a78c5;
-}
+text-decoration: none;
+color: #0f4db6}
 
 #column3 p {
-line-height:100%;
+line-height:120%;
 }
 
 #copyright {
@@ -307,5 +309,11 @@ padding-left:0;
 
 #nav {
 border-bottom:1px solid #CCC;
+overflow: hidden;
 }
 
+
+#column2 h2 > p {
+    line-height: 115%;
+    padding: 0 0 13px;
+}
