contact-form: created field-forms, changes text styles, added gradients

--- a/proffesional template/styles.css
+++ b/proffesional template/styles.css
@@ -1,13 +1,18 @@
+*{
+	margin:0;
+	padding:0;
+	border:0;
 
+}
 body {
-background:#000 url(images/upper-bg.jpg) top center no-repeat;
-margin:0;
-padding:0;
+background:#0e0e0e url(images/upper-bg.png) top center no-repeat;
+
 }
 
 h1 {
 color:#575757;
 font:25px Arial, sans-serif;
+margin: 42px 0 25px;
 }
 
 #columns {
@@ -20,7 +25,7 @@ float:left;
 width:265px;
 margin:0 0 0 40px;
 }
-#read-more{
+.read-more{
 background-image: url(images/read-more.jpg);
 background-repeat: no-repeat;
 width:98px;
@@ -178,8 +183,7 @@ padding:0;
 
 h2 {
 font:bold 15px Arial, sans-serif;
-margin:0;
-padding:50px 0 0;
+margin:50px 0 0;
 color:#575757;
 }
 
@@ -213,6 +217,7 @@ overflow:hidden;
 border-radius: 0 0 10px 10px;
 background-image: url(images/footer-border.jpg);
 background-repeat:  repeat-x;
+	clear:both;	
 }
 
 #wrapper footer ul li a {
@@ -226,7 +231,7 @@ list-style-type:none;
 }
 
 footer h2 {
-padding:30px 0 25px 0;
+margin:30px 0 25px 0;
 }
 
 #center-column p span {
@@ -315,4 +320,99 @@ display:none;
 
 #carousel a:first-child {
 display:block;
+}
+
+#gratitute {
+background: blue;
+height: 100px;
+ 
+/*background-image:url(images/contact-bg.jpg);
+background-repeat:repeat-x;*/}
+
+#gratitute p{
+font: italic 20px Arial, sans-serif;
+color:white;
+padding:20px 25px; 
+float:left;
+}
+#gratitute p+ p{
+float:right;}
+
+#col-1 p{
+	font: 13px Arial, sans-serif;
+	
+}
+#col-1{
+float: left;
+width: 385px;
+height:475px;
+/*border-right: dfdfdf;*/
+/*box-shadow: inset 0 0 8px #ddd;*/
+margin: 30px 274px 61px 41px
+}
+
+#col-2{
+float:left;
+width:230px;
+height: 566px;
+/*margin-left: 24px;*/}
+#col-shadow{
+    float:left;
+    width:24px;
+height: 566px;
+background: #dfdfdf; /* Для старых браузров */
+background: -moz-linear-gradient(left,#dfdfdf, #fff);
+background: -webkit-linear-gradient(left,#dfdfdf, #fff);
+background: -o-linear-gradient(left,#dfdfdf, #fff);
+background: -ms-linear-gradient(left,#dfdfdf, #fff);
+}
+
+#col-2 h2{
+background: #cfcfcf; /* Для старых браузров */
+background: -moz-linear-gradient(left,#cfcfcf, #fff);
+background: -webkit-linear-gradient(left,#cfcfcf, #fff);
+background: -o-linear-gradient(left,#cfcfcf, #fff);
+background: -ms-linear-gradient(left,#cfcfcf, #fff);
+
+}
+#col-2 a img {
+    margin:18px 10px 0 0;
+}
+.input{
+	width: 385px;
+	height: 33px;
+}
+
+
+.input, #tt{
+	background: #efefef; /* Для старых браузров */
+	background: -moz-linear-gradient(top,#efefef, #fff);
+	background: -webkit-linear-gradient(top,#efefef, #fff);
+    background: -o-linear-gradient(top,#efefef, #fff);
+    background: -ms-linear-gradient(top,#efefef, #fff);
+    border: 2px groove #fff;
+    border-radius:5px;
+/*border-image:url(images/field-border.jpg);
+/*background-image: - webkit-gradient (radial, center center, 900, center bottom, 0, from (#ddd), to (white));
+background-image: -mox-radial-gradient (center, 900px, center bottom, 0, from (#ddd), to (white));*/
+/*background-repeat:repeat-x;*/
+margin: 14px 0 24px;
+}
+
+/*#submit-button{
+background-image:url(images/form-submit.jpg);
+background-repeat: no-repeat; 
+}*/
+#submit-button{
+	background: -moz-linear-gradient(bottom, #e5e5e5, #fefefe);
+    background: -webkit-gradient(linear, 0 0, 0 100%, from(#00BBD6), to(#EBFFFF));
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00BBD6', endColorstr='#EBFFFF');
+    padding: 1px 15px;
+    color: #6c6c6c;
+    font: bold 12px "Myriad Pro",Arial, sans-serif;
+      /* -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;*/
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    box-shadow: 0px 3px 1px #f2f2f2;
 }
